cros: fix avatar still shown on owner desktop

changes:
- Fix regression from crrev.com/1972033002.
- Rename multi_user_window_manager_test.h to
  multi_user_window_manager_test.h.

Bug: 766834
Test: manual test and added test coverage
Change-Id: I08d9beca388bf71eecb19f9c7b6412c6f8157365
Reviewed-on: https://chromium-review.googlesource.com/977040
Commit-Queue: Qiang Xu <warx@google.com>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545619}
Former-commit-id: 18d470b2b461bc014ae98c411ca9f11102676962